postgres docker file add and loaded initial data from kafka.

--- a/dbt/src/dbt_project.yml
+++ b/dbt/src/dbt_project.yml
@@ -33,6 +33,7 @@ models:
   src:
     # Config indicated by + and applies to all files under models/example/
     example:
+      +schema: test
       +materialized: view
 
 flags:
