--- a/dbt/src/dbt_project.yml
+++ b/dbt/src/dbt_project.yml
@@ -1,4 +1,3 @@
-
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
@@ -30,11 +29,9 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  src:
-    # Config indicated by + and applies to all files under models/example/
-    example:
-      +schema: test
-      +materialized: view
+  +schema: test
+  # Config indicated by + and applies to all files under models/example/
 
 flags:
-  send_anonymous_usage_stats: False
+  send_anonymous_usage_stats: false
+  require_generic_test_arguments_property: true
